Bug 156975 - loext:theme element is missing although theme colors are used
Summary: loext:theme element is missing although theme colors are used
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-28 17:46 UTC by Regina Henschel
Modified: 2023-09-01 11:34 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2023-08-28 17:46:42 UTC
Open Draw. Define a graphic style that uses theme colors for fill and stroke. Assign the style to a shape. Save the document.

Examine the file markup. The defined style has correctly loext:stroke-complex-color and loext:fill-complex-color. But the loext:theme element is missing.

Draw should be treated same as Impress. Thus I expect the loext:theme element as child element of a style:master-page element.
Comment 1 Regina Henschel 2023-08-29 20:25:36 UTC
Work is started in https://gerrit.libreoffice.org/c/core/+/156267
Comment 2 Commit Notification 2023-08-30 14:03:35 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cf1cdc00e1e2d2684cfe57ac002a37c5f3d100c5

tdf#156975 Save a Theme in Draw too not only in Impress

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-09-01 11:34:03 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/332c37dc19e0c0dc01258c09d2c1cfbf51840301

tdf#156975 Save a Theme in Draw too not only in Impress

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.