tdf#156975 Save a Theme in Draw too not only in Impress

Draw and Impress have many things in common and should therefore be
treated equally where possible.

Only if the theme colors are present in the document, colors can be
recognized as theme colors during import.

Change-Id: Ia1fae2aff989ae305c210efa3f925a80898880e7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156267
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
(cherry picked from commit 6cdafbe4043ac98f94feda87318db44ffebba7d2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156224
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>